small edits on dataJS

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://jtran714.github.io/portfolio/",
+  "homepage": "https://jtran714.github.io/portfolio-jordan/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
